fix designe not looking ok on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,13 +3,13 @@
   height: 100%;
   margin: auto;
   text-align: center;
-  padding: 0 10%;
+  padding: 0;
 }
 
 .container {
   display: flex;
   justify-content: center;
-  
+
   .inner-container {
     display: flex;
     justify-content: center;
@@ -26,7 +26,6 @@
 
 .vending-machine {
   text-align: center;
-  padding: 20px;
   background-color: #242424;
   border: 1px solid #ccc;
   border-radius: 8px;
@@ -56,7 +55,7 @@
   flex-wrap: wrap;
   gap: 20px;
   max-width: 600px;
-  margin: 20px;
+  margin: 20px 0;
   justify-content: center;
 
   .grid-button {
@@ -102,17 +101,24 @@
 
   .return-cash {
     button {
-      min-width: 20px;
-      margin: 10px;
       border-radius: 8px;
       background-color: #2b3d6d;
       border: 1px solid #ccc;
       cursor: pointer;
       transition: background-color 0.3s ease;
       font-size: 14px;
+      width: 80px;
+      margin: 0 5px;
     }
   }
 }
+
+@media (max-width: 768px) {
+  .coins {
+    max-width: 20%;
+  }
+}
+
 
 .progress-bar {
   margin-top: 10px;
@@ -170,6 +176,10 @@
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
